--- a/eventicoUI/package.json
+++ b/eventicoUI/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.1",
+    "ngx-toastr": "^8.5.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
