--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+boto3==1.7.35
+botocore==1.10.35
 Django==2.0.5
-pytz==2018.4
 django-filter==1.1.0
+django-storages==1.6.6
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
+docutils==0.14
 gunicorn==19.8.0
+jmespath==0.9.3
 Markdown==2.6.11
 psycopg2==2.7.4
 PyJWT==1.6.1
+python-dateutil==2.7.3
+pytz==2018.4
+s3transfer==0.1.13
+six==1.11.0
