--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.7.35
 botocore==1.10.35
 Django==2.0.5
 django-filter==1.1.0
+django-seo-js==0.3.1
 django-storages==1.6.6
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
@@ -13,5 +14,6 @@ psycopg2==2.7.4
 PyJWT==1.6.1
 python-dateutil==2.7.3
 pytz==2018.4
+requests==2.2.1
 s3transfer==0.1.13
 six==1.11.0
