--- a/eventicoUI/package.json
+++ b/eventicoUI/package.json
@@ -25,11 +25,13 @@
     "@angular/platform-browser": "6.0.4",
     "@angular/platform-browser-dynamic": "6.0.4",
     "@angular/router": "6.0.4",
+    "angular-6-social-login": "^1.1.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng-simple-slideshow": "^1.2.2",
     "ngx-color-picker": "^6.3.3",
+    "ngx-sharebuttons": "^4.1.4",
     "ngx-toastr": "^8.5.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
