--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.7.35
 botocore==1.10.35
 Django==2.0.5
 django-filter==1.1.0
+django-seo-js==0.3.1
 django-storages==1.6.6
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
@@ -16,3 +17,4 @@ pytz==2018.4
 requests==2.2.1
 s3transfer==0.1.13
 six==1.11.0
+urllib3==1.23
